document to use aliases to set JVM args
available since clojurebridge 0.0.8:

See here for background on this feature.
https://github.com/behrica/clojurebridge/issues/4